   ka (Georgian). In **non-release** builds (e.g. between releases,
   so for developers building directly from git) all translations are
   enabled, even the ones with no translations at all.
 - The logging format in the `session.log` file and on-screen is now
   more similar, although the file contains a lot more per-line information.

## Modules ##
 - All QML modules now have a Qt6-compatible set of QML files as well. (thanks Anke)
 - *packagechooser* supports AppStream 1.0 API.
 - *unpackfs* now uses the `-S` option to rsync for sparse file support. (thanks Jeremy)


# 3.3.0-alpha4 (2023-10-13)

Another closing-in-on-3.3.0 release! One of the big changes is that
Calamares -- the core and nearly all of the modules in this repository --
are compatible with Qt6. That is, it compiles. Functionality has not
been tested, but early-testing distributions are encouraged to submit
pull requests to improve the code.

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Anke Boersma
 - Emir Sari
 - Evan James
 - Hector Martin
 - Ivan Borzenkov
 - Simon Quigley

## Core ##
 - Qt6 compatibility. You can choose Qt5 (with KDE Frameworks 5) as before,
   or choose Qt6 (with KDE Frameworks 6). This means that a Qt6-based Linux
   distribution can use Calamares without needing an extra version of Qt.
   Note that some KDE Frameworks are required as well, and those need to be
   Qt6-based also (and are not released as of September 2023).
 - QML-based modules are also supported in Qt6, but the QML is likely to
   be source-incompatible. The *welcomeq* module shipped with Calamares
   now has two `.qrc` files and uses the `${QT_VERSION_SUFFIX}` variable
   to pick one of the two depending on the Qt version being used.
   Other modules are likely to follow the same pattern.
 - C++ namespaces have been shuffled around and `CalamaresUtils` has been
   retired. This has an effect on all C++ plugins, since this is neither