@@ -104,7 +104,9 @@ function( calamares_add_plugin )
             message( FATAL_ERROR "${Red}NO_CONFIG${ColorReset} is set, with configuration ${Red}${PLUGIN_CONFIG_FILES}${ColorReset}" )
         endif()
         set( _destination "(unknown)" )
-        if( NOT PLUGIN_NO_INSTALL )
+        if(INSTALL_CONFIG AND NOT PLUGIN_NO_INSTALL)
+            set(_destination "${PLUGIN_DATA_DESTINATION}")
+        elseif( NOT PLUGIN_NO_INSTALL )
             set( _destination "[Build directory only]" )
         else()
             set( _destination "[Skipping installation]" )
@@ -212,6 +214,9 @@ function( calamares_add_plugin )
             else()
                 message( "   ${BoldYellow}Not updating${ColorReset} ${PLUGIN_CONFIG_FILE}" )
                 set( _warned_config ON )
+            endif()
+            if(INSTALL_CONFIG)
+                install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PLUGIN_CONFIG_FILE} DESTINATION ${PLUGIN_DATA_DESTINATION})
             endif()
         endforeach()
         if ( _warned_config )
